# financial-analyzer

./: .gitattributes  .gitignore  README.md  backend.spec  package-lock.json  package.json
.github/workflows/: release.yml
backend/: main.py  requirements.txt
backend/models/: schemas.py
backend/pipeline/: ai_extractor.py  analyzer.py  case_manager.py  cluster.py  context_manager.py  entity_resolver.py  explainer.py  extractor.py  feedback_store.py  graph.json  graph_builder.py  matcher.py  normalizer.py  parser.py  pattern_detector.py  price_analyzer.py  report_generator.py  scorer.py  source_mapper.py  supplier_analyzer.py
frontend/: api.js  app.js  graph.js  index.html  main.js  preload.js  renderer.js  updater.js
scripts/: build_backend.py  start_backend.py
tauri/: backend.spec  package-lock.json  package.json
tauri/src-tauri/: Cargo.toml  main.rs  tauri.conf.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: main.rs
