[package]
name    = "financial-analyzer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "updater",
    "shell-sidecar",
] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default         = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
