[package]
name    = "financial-analyzer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "shell-sidecar",
    "shell-execute",
    "shell-open",
    "http-all",
    "updater",
    "devtools",
    "path-all",
] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
ureq       = "2"

[features]
default         = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
